<resources>
    <string name="app_name">SpeakWithMe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_title">Speak with me</string>
    <string name="text_dialog_paragraph">Insert Name for Paragraph</string>
    <string name="text_title_dialog_detail">Update Content</string>
    <string name="text_title_setting">Setting</string>
    <string name="text_title_text_to_speech">Text to Speech</string>
    <string name="text_title_template">Template</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="share">Share</string>
    <string name="ok">Ok</string>
    <string name="cancle">Cancle</string>
    <string name="text_title_dialog_panagraph">Input Name for Panagaraph</string>
    <string name="text_input">Input here...</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="first_language">First Language</string>
    <string name="second_language">Second Language</string>
    <string name="speed">Speed</string>
    <string-array name="array_language">
        <item>Vietnamese</item>
        <item>English</item>
        <item>Japanese</item>
    </string-array>

    <string-array name="array_speed">
        <item>Slow</item>
        <item>Quick</item>
    </string-array>

</resources>
